--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,129 +1,96 @@
-.container {
-  padding: 0 2rem;
+.home_container{
+  display: grid;
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+  grid-gap: 20px;
+  padding-top: 5rem;
 }
 
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
+.product{
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  padding: 10px;
+  border-radius: 4px;
+  margin-bottom: 15px;
+  height: 220px;
 }
 
-.footer {
+.product_top{
   display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  position: relative;
+  height: 80%;
 }
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
+.product_img{
+  
 }
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
+.product_top_info{
+  width: 70%;
+  padding-left: 10px;
+  padding-right: 10px;
 }
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
+.product_category{
+  background: #e6e5e5;
+  width: 70%;
   text-align: center;
+  padding: 2px;
+  border-radius: 2px;
 }
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
+.product_title{
+  
 }
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+.product_bottom{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-
-.grid {
+.product_price{
+  color: red;
+}
+.add_to_cart{
   display: flex;
   align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
+}
+.select_qty{
+  padding: 5px;
+  margin-right: 8px;
+  border-radius: 4px;
 }
 
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+.button{
+  padding: 8px;
+  padding-left: 8px;
+  padding-right: 8px;
+  border: none;
+  border-radius: 4px;
+  outline: none;
+  background-color: #ffbf00;
 }
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+.button:hover{
+  background-color: #ff8e00;
 }
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
+.product_desc{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: black;
+  opacity: 0;
+  transition: all .5s ;
+  border-radius: 4px;
+  color: white;
+  padding: 8px;
+  font-size: 15px;
+  text-align: justify;
+  overflow: scroll;
 }
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
+.product_desc:hover{
+  opacity: 0.9;
 }
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .card,
-  .footer {
-    border-color: #222;
-  }
-  .code {
-    background: #111;
-  }
-  .logo img {
-    filter: invert(1);
+@media only screen and (min-width: 480px){
+  .home_container{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 }
